--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,81 +1,98 @@
 /*Custome style*/
+/*headers bg color*/
+thead.v-data-table-header {
+    background-color: #f1f4f8;
+}
+/* border divider */
 .theme--light.v-data-table>.v-data-table__wrapper>table>tbody>tr:not(:last-child)>td:not(.v-data-table__mobile-row) {
 
-    border-right: 1px solid #eee !important;
+    border-right: 1px solid #dfebff !important;
 }
 
 tbody tr td:nth-child(01) {
-    border-left: 1px solid #eee !important;
+    border-left: 1px solid #dfebff !important;
 }
 
 .td {
-    border-right: 1px solid #d4e0f0 !important;
+    border-right: 1px solid #f1f4f8 !important;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.tr:nth-of-type(even) {
+    background-color: #f1f4f8;
+}
+  /*align content*/
+  .align-content {
+    width: calc(100% - 76px);
+    display: grid;
+    align-content: center;
+  }
+/* span color action btn */
+.btnACt {
+    color: #fff;
+}
+/* margin datatable */
 .row.tab {
     margin: 0;
 }
+/*  show div main ( margin subheader)*/
 main.v-main {
     margin-top: 64px;
 }
-
+/*mesures div main   */
 .v-application .py-8 {
     padding-top: 0px !important;
     padding-right: 0px !important;
     padding-left: 0px !important;
 }
-
+/*link to folder*/
+.menuInfo{
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    border-bottom: 1px solid #eee; 
+    padding: 0px !important;
+}
+/* bg color div main */
+.addClient {
+    background: #f1f4f8;
+    width: 100%;
+}
+/* margin filter btn */
 .fltr{
     margin-left: 0px !important;
-    margin-right: 0px !important ;
+    margin-right: 0px !important;
 }
-
-
-.addClient {
-    background: #ededed;
-    width: 100%;
-}
-
-.tools {
-    width: 100%;
-    border-bottom: 1px solid #eee;
-}
+/*margin refresh btn*/
 .ref {
     margin-right: 0 !important;
 }
+/* direction btns */
+.tools {
+    width: 100%;
+    /* border-bottom: 1px solid #eee; */
+}
+/* flex btns*/
 .testetstetetetete {
     display: flex;
     justify-content: end;
 }
+/*space between btns*/
 .Popup.fltr {
-    padding-left: 10px !important;
-    margin-right: 10px !important;
+    padding-left: 8px !important;
+    margin-right: 8px !important;
 }
+/* details + actions */
+.layout{
+    width: 100%;
+}
+.cont {
+    display: flex;
+    justify-content: end;
+ 
+}
+.eye {
+    display: inline-flex;
+    padding-left: 100px !important;
+}
+  .menu{
+    margin-left: 70%;
+  }
